# pixly

./: .gitignore  main.py  pyproject.toml  requirements.txt  test.db
app/: app.py  crud.py  db.py  images.py  init_db.py  main.py  models.py  schemas.py
app/core/: config.py  security.py
app/models/: __init__.py  book.py  user.py
app/routers/: auth.py  books.py
app/schemas/: __init__.py  book.py  user.py
app/services/: imagekit.py
scripts/: generate_secret_key.py
